--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && tsc",
-    "start": "node dist/main/api"
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "start": "node dist/main/api",
+    "lint": "eslint . --fix"
   },
   "keywords": [],
   "author": "Murilo Maia",
@@ -13,6 +14,12 @@
   "devDependencies": {
     "@types/module-alias": "2.0.1",
     "@types/node": "16.6.1",
+    "@typescript-eslint/eslint-plugin": "4",
+    "eslint": "7",
+    "eslint-config-standard-with-typescript": "20.0.0",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-promise": "4",
     "typescript": "4.3.5"
   },
   "engines": {
