--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "start": "node dist/main/api",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "test": "jest --passWithNoTests --no-cache --runInBand"
   },
   "keywords": [],
   "author": "Murilo Maia",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "27.0.1",
     "@types/module-alias": "2.0.1",
     "@types/node": "16.6.1",
     "@typescript-eslint/eslint-plugin": "4",
@@ -20,6 +22,8 @@
     "eslint-plugin-import": "2",
     "eslint-plugin-node": "11",
     "eslint-plugin-promise": "4",
+    "jest": "27.0.6",
+    "ts-jest": "27.0.4",
     "typescript": "4.3.5"
   },
   "engines": {
