--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-node": "11",
     "eslint-plugin-promise": "4",
     "jest": "27.0.6",
+    "lint-staged": "11.1.2",
     "ts-jest": "27.0.4",
     "typescript": "4.3.5"
   },
