--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "start": "node dist/main/api",
     "lint": "eslint . --fix",
-    "test": "jest --passWithNoTests --no-cache --runInBand"
+    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "Murilo Maia",
@@ -22,6 +23,7 @@
     "eslint-plugin-import": "2",
     "eslint-plugin-node": "11",
     "eslint-plugin-promise": "4",
+    "husky": "7.0.1",
     "jest": "27.0.6",
     "lint-staged": "11.1.2",
     "ts-jest": "27.0.4",
