feat(fb-auth): ensure service calls TokenGenerator with correct expiration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
   "rules": {
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/no-namespace": "off",
-    "@typescript-eslint/no-invalid-void-type": "off"
+    "@typescript-eslint/no-invalid-void-type": "off",
+    "space-before-function-paren": "off",
+    "@typescript-eslint/space-before-function-paren": "off"
   }
 }
