--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Murilo Maia",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "27.0.1",
     "@types/module-alias": "2.0.1",
     "@types/node": "16.6.1",
@@ -34,6 +35,7 @@
     "node": "16.x"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "module-alias": "2.2.2",
     "rimraf": "3.0.2"
   }
